test/sema/interface-impl-decl-error-not-interface.delta.output
interface-impl-decl-error-not-interface.delta:4:14: error: 'StringBuffer' is not an interface
struct Z<T>: StringBuffer {}
             ^
