test/sema/interface-impl-decl-error-not-interface.delta
// RUN: %check_errors %not %delta -typecheck %s

// CHECK: [[@LINE+1]]:14: error: 'StringBuffer' is not an interface
struct Z<T>: StringBuffer {}

void main() {
    var z = Z<int>();
}
